--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Angular Contacts</title>
     <link rel="stylesheet" type='text/css' href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="vendor/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="lib/node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
@@ -16,7 +18,7 @@
 
 
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
-
+    <script src="https://use.fontawesome.com/fe901e7f56.js"></script>
     <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script>
