--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="javascripts/AppConfig.js"></script>
     
     <script type="text/javascript" src="javascripts/services/LoginService.js"></script>
+    <script type="text/javascript" src="javascripts/services/ContactsService.js"></script>
 
     <script type="text/javascript" src="javascripts/controllers/NavCtrl.js"></script>
     <script type="text/javascript" src="javascripts/controllers/LoginCtrl.js"></script>
