--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     <script type="text/javascript" src="javascripts/controllers/NewCtrl.js"></script>
     <script type="text/javascript" src="javascripts/controllers/ViewCtrl.js"></script>
     <script type="text/javascript" src="javascripts/controllers/EditCtrl.js"></script>
+    <script type="text/javascript" src="javascripts/controllers/DetailCtrl.js"></script>
 </body>
 </html>
