--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <script type="text/javascript" src="lib/node_modules/angular-animate/angular-animate.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="lib/node_modules/angular-base64-upload/dist/angular-base64-upload.min.js"></script>
+    <script type="text/javascript" src="lib/node_modules/angular-base64/angular-base64.min.js"></script>
     
     <script type="text/javascript" src="javascripts/app.js"></script>
     <script type="text/javascript" src="javascripts/AppConstants.js"></script>
